# steam_client_loader

./: .gitignore  CHANGELOG.md  Cargo.toml  Readme.md  build.ps1
.github/workflows/: build.ps1  build.sh  build_and_release.yaml  create-release.js
release/: Example.achievement_reminder_setting.json  achievements_gen.py
release/steam_settings/: achievements.json
src/: achievement.rs  fonts.rs  main.rs  setting.rs
