[package]
name = "steam_client_loader"
version = "0.1.1"
edition = "2021"

[dependencies]
winrt-notification = "0.5.1"
notify = "6.1.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
clap = { version = "4.5.18", features = ["derive"] }
ini = "1.3.0"
dirs = "5.0.1"
chrono = "0.4.38"